--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/favicon.jpeg" />
-    <link rel="apple-touch-icon" href="/walkline-logo.jpeg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/walkline-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Walkline</title>
     <script>
